Version 0.01 Email alignment fixed

--- a/style.css
+++ b/style.css
@@ -55,3 +55,8 @@ a.noline {
 .otherparagraph {
   margin-left: 155px;
 }
+
+#contactUS {
+  font-family: "Roboto", sans-serif;
+  text-align: right;
+}
